# EKF_SLAM

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: slam_params.yaml
include/association/: data_association.hpp  icp.hpp
include/core/: slam_node.hpp  slam_system.hpp
include/mapping/: occupancy_mapper.hpp
include/preprocessing/: laser_processor.hpp
include/utils/: geometry_utils.hpp  jacobian_utils.hpp  math_utils.hpp  matrix_utils.hpp
include/visualization/: trajectory_visualizer.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ekf_slam/include/association/: data_association.hpp
install/ekf_slam/include/core/: slam_node.hpp  slam_system.hpp
install/ekf_slam/include/mapping/: occupancy_mapper.hpp
install/ekf_slam/include/preprocessing/: laser_processor.hpp
install/ekf_slam/include/utils/: geometry_utils.hpp  jacobian_utils.hpp  math_utils.hpp  matrix_utils.hpp
install/ekf_slam/lib/ekf_slam/: slam_node
install/ekf_slam/share/ament_index/resource_index/package_run_dependencies/: ekf_slam
install/ekf_slam/share/ament_index/resource_index/parent_prefix_path/: ekf_slam
install/ekf_slam/share/ekf_slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ekf_slam/share/ekf_slam/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  ekf_slamConfig-version.cmake  ekf_slamConfig.cmake
install/ekf_slam/share/ekf_slam/config/: slam_params.yaml
install/ekf_slam/share/ekf_slam/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ekf_slam/share/ekf_slam/launch/: slam_launch.py
launch/: polar_logging.launch.py  slam_launch.py
log/: latest_build
scripts/: analyze_slam_log.py  compute_ate.py
src/association/: data_association.cpp  icp.cpp
src/core/: slam_node.cpp  slam_system.cpp
src/mapping/: occupancy_mapper.cpp
src/preprocessing/: laser_processor.cpp
src/tools/: data_logger_node.cpp  global_to_polar_node.cpp
src/visualization/: trajectory_visualizer.cpp
test/unit_tests/: test_ekf_core.cpp
