<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_slam</name>
  <version>0.0.1</version>
  <description>2D LiDAR EKF SLAM implementation for ROS2</description>
  
  <maintainer email="subin.park017@gmail.com">Subin Park</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/binxni/ekf_slam</url>
  <author email="subin.park017@gmail.com">Subin Park</author>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  
  <!-- Math and computation -->
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

